<resources>
    <string name="app_name">E-Proc Umahku</string>
    <string name="lbl_username">Nama Lengkap</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register_here">Atau Buat Akun Baru</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="lbl_procurements">Procurements</string>
    <string name="lbl_profile">Profil</string>
    <string name="lbl_my_procurements">My Procurement</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_call">Telepon</string>
    <string name="lbl_message">Kirim Pesan</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_kirim_email">Kirim Email</string>
    <string name="lbl_rek_number">Nomor Rekening</string>
    <string name="lbl_balance">Saldo</string>
    <string name="lbl_inhouse_transfer">Transfer</string>
    <string name="lbl_rek_koran">Rekening Koran</string>
    <string name="lbl_connect_account">Konek Akun</string>
    <string name="lbl_create_virtual_account">Buat Akun Baru</string>
    <string name="lbl_create_new_account">Buka Rekening Baru</string>
    <string name="lbl_detail_proposal">Detail Proposal</string>
    <string name="lbl_deal">Make Deal</string>
    <string name="lbl_register">Daftar</string>
    <string name="lbl_phone">Nomor Telepon</string>
    <string name="lbl_npwp">NPWP</string>
    <string name="lbl_connect_existing_rekening">Gunakan Rekening Yang Ada</string>
    <string name="placeholder_rek_number">No. Rek: %s</string>
    <string name="lbl_login_error">Login failed</string>
    <string name="lbl_something_went_wrong">Something went wrong</string>
    <string name="lbl_email_password_cannot_empty">Email and password cannot be empty</string>
    <string name="lbl_ibu_kandung">Nama Ibu Kandung</string>
    <string name="lbl_nik">NIK</string>
    <string name="lbl_tgl_lahir">Tanggal Lahir(DD-MM-YYYY)</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_please_fill_field">Please Fill The Field</string>
</resources>
