<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/window_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/btn_dashboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="goToDashboard"
        android:orientation="vertical"
        android:paddingBottom="9dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_procurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_home_white_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_dashboard"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_procurement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="goToProcurement"
        android:orientation="vertical"
        android:paddingBottom="9dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintStart_toEndOf="@id/btn_dashboard"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_notifications_white_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_procurements"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="goToProfile"
        android:orientation="vertical"
        android:paddingBottom="9dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_procurement"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle_white_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_profile"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>