<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_pp_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mansion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blur_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blackAlpha2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_call"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/blackAlpha1"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/blur_view"
        app:layout_constraintEnd_toStartOf="@+id/btn_email"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_bookmark_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_inhouse_transfer"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/blackAlpha1"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/blur_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_call">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_chrome_reader_mode_black_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rek_koran"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_pp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/mansion" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Dr. Marlisa Yuan Punzalam"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view" />

    <TextView
        android:id="@+id/txt_label_rek_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/lbl_rek_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_call"
        app:layout_constraintEnd_toStartOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <TextView
        android:id="@+id/txt_rek_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3233455433432"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_label_rek_number"
        app:layout_constraintTop_toBottomOf="@id/txt_label_rek_number" />

    <View
        android:id="@+id/separator"
        android:layout_width="2dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_label_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/lbl_balance"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <TextView
        android:id="@+id/txt_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IDR 1,000,000,-"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_label_balance"
        app:layout_constraintTop_toBottomOf="@id/txt_label_balance" />

</android.support.constraint.ConstraintLayout>