<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProposalDetailActivity">

    <View
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_contractor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt_contractor_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Contractor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_contractor_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Address"
        android:textColor="@color/whiteAlpha1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/txt_contractor_username" />

    <TextView
        android:id="@+id/txt_contractor_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Phone"
        android:textColor="@color/whiteAlpha1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/txt_contractor_address" />

    <TextView
        android:id="@+id/txt_contractor_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Email"
        android:textColor="@color/whiteAlpha1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/txt_contractor_phone" />

    <ImageView
        android:id="@+id/stars"
        android:layout_width="60dp"
        android:layout_height="14dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_stars_white"
        android:tint="@color/whiteAlpha1"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/txt_contractor_email" />

    <View
        android:id="@+id/stars_prog"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/stars"
        app:layout_constraintTop_toBottomOf="@+id/txt_contractor_email" />

    <TextView
        android:id="@+id/txt_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="2.85"
        android:textColor="@color/whiteAlpha1"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/stars_prog"
        app:layout_constraintTop_toTopOf="@id/stars_prog" />

    <LinearLayout
        android:id="@+id/btn_call"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="call"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/btn_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stars_prog">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_phone_white_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_call"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="sendEmail"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/btn_message"
        app:layout_constraintStart_toEndOf="@+id/btn_call"
        app:layout_constraintTop_toBottomOf="@+id/stars_prog">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_email_white_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_kirim_email"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_message"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:onClick="sendMessage"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_email"
        app:layout_constraintTop_toBottomOf="@+id/stars_prog">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_message_white_24dp"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_message"
            android:textColor="@color/white" />
    </LinearLayout>

    <include
        layout="@layout/detail_proposal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
</android.support.constraint.ConstraintLayout>